Style refactor, add orders DB and order blotter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://cdn.prod.website-files.com/6659c0a65810ae47a8cd6886/6659c24b164e18f22ba48b4c_favicon.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>ModernFi Liquidity</title>
   </head>
   <body>
     <div id="root"></div>
